# synckit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package-lock.json
core/: Cargo.toml  WASM_README.md
core/benches/: delta_bench.rs  lww_bench.rs  vector_clock_bench.rs
docs/: README.md
docs/api/: SDK_API.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: choosing-variant.md  conflict-resolution.md  getting-started.md  migration-from-firebase.md  migration-from-supabase.md  migration-from-yjs.md  offline-first.md  performance.md  testing.md
examples/collaborative-editor/: README.md  index.html  package.json
examples/collaborative-editor/src/: App.css  App.tsx  store.ts  types.ts
examples/collaborative-editor/src/components/: DocumentTabs.tsx  Editor.tsx  Header.tsx  ParticipantList.tsx  Sidebar.tsx
examples/project-management/: README.md  index.html  package.json  vite.config.ts
examples/project-management/src/: App.tsx  index.css  store.ts  types.ts
examples/project-management/src/components/: Header.tsx  KanbanBoard.tsx  Sidebar.tsx  TaskCard.tsx  TaskModal.tsx  TeamPresence.tsx
examples/project-management/src/components/ui/: button.tsx
examples/project-management/src/lib/: utils.ts
examples/todo-app/: package.json  vite.config.ts
examples/todo-app/src/: App.tsx
examples/todo-app/src/components/: TestButton.tsx  TodoApp.tsx
examples/vanilla-counter/: README.md
sdk/: README.md
server/typescript/src/: index.ts
server/typescript/src/sync/: coordinator.ts
server/typescript/src/websocket/: connection.ts  protocol.ts  registry.ts  server.ts
tests/: README.md  bunfig.toml  package.json  tsconfig.json
tests/chaos/: chaos-helpers.ts  convergence.test.ts  disconnections.test.ts  latency.test.ts  message-corruption.test.ts  network-simulator.ts  packet-loss.test.ts
tests/integration/: config.ts  setup.ts
tests/integration/helpers/: assertions.ts  memory-storage.ts  test-client.ts  test-server.ts
tests/integration/offline/: basic-offline.test.ts  conflicts.test.ts  delayed-sync.test.ts  network-partition.test.ts  reconnection.test.ts  server-restart.test.ts
tests/integration/storage/: failover.test.ts  migrations.test.ts  multi-server.test.ts  persistence.test.ts  recovery.test.ts
tests/integration/sync/: basic-crud.test.ts  concurrent.test.ts  deletes.test.ts  multi-client.test.ts  two-client.test.ts  vector-clock.test.ts
tests/load/: burst-traffic.test.ts  concurrent-clients.test.ts  high-frequency.test.ts  large-documents.test.ts  profiling.test.ts  sustained-load.test.ts
